<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.vmturbo</groupId>
        <artifactId>vmt-parent</artifactId>
        <version>1.0.1</version>
    </parent>

    <artifactId>analysis-parent</artifactId>
    <name>Analysis Parent</name>
    <description>New Market-2 parent pom</description>
    <version>1.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>1.8</java.version>
    </properties>

    <profiles>
        <profile>
            <id>analysis</id>
            <modules>
                <module>platform.analysis</module>
                <module>platform.analysis.protobuf</module>
            </modules>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.7.5.201505241946</version>
                    <executions>
                        <execution>
                            <id>jacoco-initialize</id>
                            <phase>initialize</phase>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>jacoco-report</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <scm>
        <connection>scm:svn:https://insight.svn.cloudforge.com/analysis/trunk</connection>
        <developerConnection>scm:svn:https://insight.svn.cloudforge.com/analysis/trunk</developerConnection>
        <url>https://insight.browse.cloudforge.com/cgi-bin/analysis/trunk</url>
    </scm>

</project>
